--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -14,6 +14,10 @@ html {
     padding: 0;
 }
 
+html {
+    background-color: $darkBlue;
+}
+
 .weather {
     margin: 0;
 }
@@ -26,4 +30,9 @@ html {
     height: 100vh;
     padding: 50px 30px 0;
     width: 100vw;
+}
+
+.loading {
+    margin: 40px auto;
+    text-align: center;
 }
